[IDP-2305] added junit for message scheduler